--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zaha Store</title>
-    <link rel="stylesheet" href="zaha.css">
+    <link rel="stylesheet" href="estilo/zaha.css">
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -62,8 +62,8 @@
 
     <footer class="foot">
          <ul class="redes">
-            <li><img src="icoinsta.png" alt=""><a href="">@ZahaStore</a></li>
-            <li><img src="icoface.png" alt=""><a href="">@ZahaStore</a></li>
+            <li><img src="imagens/icoinsta.png" alt=""><a href="">@ZahaStore</a></li>
+            <li><img src="imagens/icoface.png" alt=""><a href="">@ZahaStore</a></li>
          </ul>
 
          <p class="copy">&copy;ZahaStore</p>
